overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 @layer base {
   * {
     @apply border-border ;
-    scrollbar-color: hsl(var(--primary)) hsl(var(--secondary));
+    scrollbar-color: var(--primary) var(--secondary);
   }
   body {
     @apply bg-background text-foreground m-0 p-0 min-h-screen;
